[gd_scene load_steps=2 format=3 uid="uid://k6mqrxoel27n"]

[ext_resource type="Script" uid="uid://6381coiy0fkf" path="res://scripts/ui/main_menu.gd" id="1_l6cm7"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_l6cm7")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuContainer" type="VBoxContainer" parent="Control"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="Control/MenuContainer"]
layout_mode = 2
text = "Daniels Manager Game"
horizontal_alignment = 1

[node name="SquadButton" type="Button" parent="Control/MenuContainer"]
layout_mode = 2
text = "Squad"

[node name="PlayMatchButton" type="Button" parent="Control/MenuContainer"]
layout_mode = 2
text = "Play Match"

[node name="OpenPackButton" type="Button" parent="Control/MenuContainer"]
layout_mode = 2
text = "Open Pack"

[node name="QuitButton" type="Button" parent="Control/MenuContainer"]
layout_mode = 2
text = "Quit"
